--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Repo/show.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Repo/show.html.twig
@@ -24,7 +24,13 @@
             <li>{% trans %}bundles.show.infos.created{% endtrans %} <span>{{ repo.createdAt|date('date_format'|trans) }}</span></li>
             <li>{% trans %}bundles.show.infos.contributors{% endtrans %} <span>{{ repo.nbContributors }}</span></li>
             <li>{% trans %}bundles.show.infos.followers{% endtrans %} <span>{{ repo.nbFollowers }}</span></li>
-            <li>{% trans %}bundles.show.infos.buildStatus{% endtrans %} <span><a href="{{ repo.travisUrl }}">{{ ("travis.buildStatus." ~ repo.travisCiBuildStatus)|trans }}</a></span></li>
+            {% if repo.usesTravisCi %}
+            <li class="info-travis">
+                <a href="{{ repo.travisUrl }}">
+                    <img src="https://secure.travis-ci.org/{{ repo.username }}/{{ repo.name }}.png"></img>
+                </a>
+             </li>
+            {% endif %}
         </ul>
 
         <h3>{% trans %}bundles.show.latest_commits.title{% endtrans %}</h3>
