Update vendors and use KnpPaginatorBundle v2.0

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/User/list.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/User/list.html.twig
@@ -42,6 +42,6 @@
             </li>
             {%- endfor %}
         </ul>
-        {{ users|paginate }}
+        {{ users.render()|raw }}
     </div>
 {% endblock %}
