--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Repo/list.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Repo/list.html.twig
@@ -14,6 +14,6 @@
             </ul>
         </div>
         {% include 'KnpBundlesBundle:Repo:bigList.html.twig' with {'repos': repos} %}
-        {{ repos|paginate }}
+        {{ repos.render()|raw }}
     </div>
 {% endblock %}
