--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Main/api.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Main/api.html.twig
@@ -2,14 +2,11 @@
 
 {% block title %}{% trans %}api.meta.title{% endtrans %}{% endblock %}
 
-{% block h1 %}{% trans %}api.title{% endtrans %}{% endblock %}
-
 {% block description %}{% trans %}api.description{% endtrans %}{% endblock %}
-
-{% block slogan %}{% trans %}api.slogan{% endtrans %}{% endblock %}
 
 {% block content %}
 <div id="api">
+    <h1>{% trans %}api.title{% endtrans %}</h1>
     <div id="main">
         <div class="doc_text markdown">
             {{ text|markdown }}
