--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Repo/searchResults.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Repo/searchResults.html.twig
@@ -6,11 +6,10 @@
 
 {% block title %}{% trans with {'%query%': query} %}search.results.meta.title{% endtrans %}{% endblock %}
 
-{% block h1 %}{% trans with {'%query%': query} %}search.results.title{% endtrans %}{% endblock %}
-
 {% block description %}{% trans with {'%count%': repos|length, '%query%': query} %}search.results.meta.description{% endtrans %}{% endblock %}
 
 {% block content %}
+    <h1>{% trans with {'%query%': query} %}search.results.title{% endtrans %}</h1>
     <div id="main">
         <div id="search-result-bundles">
             <h2>{{ bundles|length }} Bundle{{ bundles|length > 1 ? 's' : '' }}</h2>
