--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Repo/list.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Repo/list.html.twig
@@ -1,18 +1,20 @@
 {% extends 'KnpBundlesBundle::layout.html.twig' %}
 
-{% block body_attributes %}id="repos-list"{% endblock %}
+{% block body_attributes %}class="repos-list"{% endblock %}
 
 {% block content %}
-    <div id="main">
-        <div id="sort">
-            <ul class="tabs" id="repo-tabs">
+    <div class="content-title">
+        <h1>{% block h1 %}{% endblock %}</h1>
+        <div class="dropdown-menu group">
+            <a class="label">{{ sortLegends[sort]|trans }}</a>
+            <ul class="dropdown-menu-list">
                 {%- for field, text in sortLegends %}
-                <li{{ field == sort ? ' class="current"' : '' }}>
-                    <a href='{% block route_list %}{{ path('bundle_list', {'sort': field}) }}{% endblock %}'>{{ text|trans }}</a>
-                </li>
+                <li><a href='{% block route_list %}{{ path('bundle_list', {'sort': field}) }}{% endblock %}'>{{ text|trans }}</a></li>
                 {%- endfor %}
             </ul>
         </div>
+    </div>
+    <div id="main">
         {% include 'KnpBundlesBundle:Repo:bigList.html.twig' with {'repos': repos} %}
         {{ repos.render()|raw }}
     </div>
