--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Repo/searchResults.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Repo/searchResults.html.twig
@@ -1,6 +1,6 @@
 {% extends 'KnpBundlesBundle:Repo:search.html.twig' %}
 
-{% block body_attributes %}id="search-result"{% endblock %}
+{% block body_attributes %}class="repos-list" id="search-result"{% endblock %}
 
 {% block search_query %}{{ query }}{% endblock %}
 
@@ -11,13 +11,17 @@
 {% block content %}
     <h1>{% trans with {'%query%': query} %}search.results.title{% endtrans %}</h1>
     <div id="main">
-        <div id="search-result-bundles">
-            <h2>{{ bundles|length }} Bundle{{ bundles|length > 1 ? 's' : '' }}</h2>
+        <section id="search-result-bundles">
+            <div class="content-title">
+                <h1>{{ bundles|length }} Bundle{{ bundles|length > 1 ? 's' : '' }}</h1>
+            </div>
             {% include 'KnpBundlesBundle:Bundle:bigList.html.twig' with {'repos': bundles} %}
-        </div>
-        <div id="search-result-projects">
-            <h2 class="section-title">{{ projects|length }} Project{{ projects|length > 1 ? 's' : '' }}</h2>
+        </section>
+        <section id="search-result-projects">
+            <div class="content-title">
+                <h1 class="section-title">{{ projects|length }} Project{{ projects|length > 1 ? 's' : '' }}</h1>
+            </div>
             {% include 'KnpBundlesBundle:Project:bigList.html.twig' with {'repos': projects} %}
-        </div>
+        </section>
     </div>
 {% endblock %}
